Fixed modal scrollbar issue

--- a/src/Modal/Modal.module.scss
+++ b/src/Modal/Modal.module.scss
@@ -35,7 +35,7 @@
   min-height: 4.5rem;
   max-height: 80vh;
   padding: 1rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: var(--white);
   border-radius: 0.5rem;
 }
